[package]
name = "star_types"
version = "0.1.0"
authors = ["jolestar <jolestar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = "0.9"
proptest-derive = "0.1.0"
protobuf = "~2.7"
radix_trie = "0.1.3"
rand = "0.6.5"
serde = { version = "1.0.96", features = ["derive"] }
itertools = "0.8.0"
hex = "0.3.2"
grpcio = "0.4.4"
futures = { version = "0.3.0-alpha.16", package = "futures-preview", features = ["async-await", "nightly", "io-compat", "compat"] }
types = { package = "types", path = "../types"}
canonical_serialization = { path = "../common/canonical_serialization"}
crypto = { path = "../crypto/legacy_crypto" }
nextgen_crypto = { path = "../crypto/nextgen_crypto" }
failure = { path = "../common/failure_ext", package = "failure_ext" }
proptest_helpers = { path = "../common/proptest_helpers" }
proto_conv = { path = "../common/proto_conv", features = ["derive"] }
vm_runtime_types = { path = "../language/vm/vm_runtime/vm_runtime_types"}

[build-dependencies]
build_helpers = { path = "../common/build_helpers" }

[dev-dependencies]
nextgen_crypto = { path = "../crypto/nextgen_crypto", features = ["testing"] }