[package]
name = "star_types"
version = "0.1.0"
authors = ["jolestar <jolestar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = "0.9"
proptest-derive = "0.1.0"
protobuf = "~2.7"
radix_trie = "0.1.3"
rand = "0.6.5"
serde = { version = "1.0.96", features = ["derive"] }
itertools = "0.8.0"
hex = "0.3.2"
grpcio = "0.4.4"
lazy_static = "1.3.0"
logger = { path = "../libra/common/logger" }
futures03 = { version = "0.3.0-alpha.16", package = "futures-preview", features = ["async-await", "nightly", "io-compat", "compat"] }
types = { package = "types", path = "../libra/types", features = ["testing"]}
canonical_serialization = { path = "../libra/common/canonical_serialization"}
crypto = { path = "../libra/crypto/crypto" }
failure = { path = "../libra/common/failure_ext", package = "failure_ext" }
proptest_helpers = { path = "../libra/common/proptest_helpers" }
proto_conv = { path = "../libra/common/proto_conv", features = ["derive"] }
vm_runtime_types = { path = "../libra/language/vm/vm_runtime/vm_runtime_types"}
futures = "0.1.28"
parity-multiaddr = "0.4.0"

[build-dependencies]
build_helpers = { path = "../libra/common/build_helpers" }

[dev-dependencies]
crypto = { path = "../libra/crypto/crypto", features = ["testing"] }