[package]
name = "star_types"
version = "0.1.0"
authors = ["jolestar <jolestar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = "0.9"
proptest-derive = "0.1.0"
protobuf = "~2.7"
radix_trie = "0.1.3"
rand = "0.6.5"
serde = { version = "1.0.96", features = ["derive"] }
itertools = "0.8.0"
hex = "0.3.2"
grpcio = "0.4.4"
lazy_static = "1.3.0"
atomic_refcell = "0.1.3"
logger = { path = "../libra/common/logger" }
futures03 = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["async-await", "io-compat", "compat"] }
libra-types = { path = "../libra/types", features = ["testing"]}
canonical-serialization = { path = "../libra/common/canonical-serialization"}
crypto = { path = "../libra/crypto/crypto" }
failure = { path = "../libra/common/failure_ext", package = "failure_ext" }
proptest_helpers = { path = "../libra/common/proptest_helpers" }
prost = "0.5.0"
vm_runtime_types = { path = "../libra/language/vm/vm_runtime/vm_runtime_types"}
futures = "0.1.28"
parity-multiaddr = "0.4.0"
num_enum = "0.4.1"

[build-dependencies]
prost-build = "0.5.0"

[dev-dependencies]
prost-ext = { path = "../libra/common/prost-ext" }
serde_json = "1.0.40"
crypto = { path = "../libra/crypto/crypto", features = ["testing"] }

[features]
default = []
testing = ["crypto/testing"]
