[package]
name = "starget_types"
version = "0.1.0"
authors = ["jolestar <jolestar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.6.0"
byteorder = "1.3.2"
bytes = "0.4.12"
chrono = "0.4.7"
hex = "0.3.2"
itertools = "0.8.0"
lazy_static = "1.3.0"
logger = { path = "../common/logger" }
proptest = "0.9"
proptest-derive = "0.1.0"
protobuf = "2.7"
radix_trie = "0.1.3"
rand = "0.6.5"
serde = { version = "1.0.96", features = ["derive"] }
serde_json = "1.0.40"
tiny-keccak = "1.5.0"

failure = { path = "../common/failure_ext", package = "failure_ext" }
canonical_serialization = { path = "../common/canonical_serialization"}
crypto = { path = "../crypto/legacy_crypto" }
nextgen_crypto = { path = "../crypto/nextgen_crypto" }
proptest_helpers = { path = "../common/proptest_helpers" }
proto_conv = { path = "../common/proto_conv", features = ["derive"] }