[package]
name = "switch"
version = "0.1.0"
authors = ["fanngyuan@gmail.com"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
star_types = { package = "star_types", path = "../star_types" }
types = { package = "types", path = "../libra/types"}
futures = { version = "0.3.0-alpha.16", package = "futures-preview", features = ["async-await", "nightly", "io-compat", "compat"] }