[package]
name = "switch"
version = "0.1.0"
authors = ["fanngyuan@gmail.com"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sgtypes = { path = "../sgtypes" }
libra-types = { path = "../libra/types"}
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["async-await", "io-compat", "compat"] }