[package]
name = "chain_client"
version = "0.1.0"
authors = ["tiangong3624749 <tiangong3624749@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.4.4"
proto_conv = { path = "../../libra/common/proto_conv", features = ["derive"] }
protobuf = "2.7"
grpc_helpers = { path = "../../libra/common/grpc_helpers" }
types = { path = "../../libra/types" }
futures = "0.1.28"
star_types = { path = "../../star_types" }
crypto = { path = "../../libra/crypto/crypto" }
failure = { path = "../../libra/common/failure_ext", package = "failure_ext" }

[dev-dependencies]
crypto = { path = "../../libra/crypto/crypto", features = ["testing"] }