[package]
name = "chain_service"
version = "0.1.0"
authors = ["tiangong3624749 <tiangong3624749@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.4.4"
proto_conv = { path = "../../libra/common/proto_conv", features = ["derive"] }
protobuf = "2.7"
grpc_helpers = { path = "../../libra/common/grpc_helpers" }
types = { path = "../../libra/types" }
futures = "0.1.28"
star_types = { path = "../../star_types" }
crypto = { path = "../../libra/crypto/crypto" }
scratchpad = { path = "../../libra/storage/scratchpad" }
state_storage = { path = "../../storage/state_storage" }
hex = "0.3.2"
vm_genesis = { path = "../../libra/language/vm/vm_genesis" }
channel = { path = "../../libra/common/channel" }
metrics = { path = "../../libra/common/metrics" }
futures03 = { package = "futures-preview", version = "=0.3.0-alpha.17", features = ["async-await", "nightly", "io-compat", "compat"] }
tokio = "0.1.22"
failure = { path = "../../libra/common/failure_ext", package = "failure_ext" }
vm_runtime = { path = "../../libra/language/vm/vm_runtime" }
lazy_static = "1.3.0"
config = { path = "../../libra/config"}
vm_cache_map = { path = "../../libra/language/vm/vm_runtime/vm_cache_map" }
rental = "0.5.4"
compiler = { path = "../../libra/language/compiler" }
vm_runtime_types = { path = "../../libra/language/vm/vm_runtime/vm_runtime_types" }
vm = { path = "../../libra/language/vm" }
state_view = { path = "../../libra/storage/state_view" }
state_store = { path = "../../storage/state_store" }
bytecode_verifier = { path = "../../libra/language/bytecode_verifier" }
struct_cache = { path = "../../storage/struct_cache" }
clap = "2.32"
stdlib = { path = "../../libra/language/stdlib" }
accumulator = {path = "../../libra/storage/accumulator" }
atomic_refcell = "0.1.3"
signal-hook = "0.1.10"
logger = { path = "../../libra/common/logger" }
env_logger = { version = "0.6" }


[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"

[dev-dependencies]
crypto = { path = "../../libra/crypto/crypto", features = ["testing"] }