[package]
name = "mock_chain_client"
version = "0.1.0"
authors = ["jolestar <jolestar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1.22"
types = { path = "../../libra/types" }
star_types = { path = "../../star_types" }
failure = { path = "../../libra/common/failure_ext", package = "failure_ext" }
chain_client = {path = "../chain_client"}
chain_service = {path = "../chain_service"}
crypto = { path = "../../libra/crypto/crypto" }
logger = { path = "../../libra/common/logger"}
futures03 = { package = "futures-preview", version = "=0.3.0-alpha.17", features = ["async-await", "nightly", "io-compat", "compat"] }
futures = "0.1.28"
grpcio = "0.4.4"
atomic_refcell = "0.1.3"

[dev-dependencies]
crypto = { path = "../../libra/crypto/crypto", features = ["testing"] }