[package]
name = "mock_chain_client"
version = "0.1.0"
authors = ["jolestar <jolestar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1.22"
types = { path = "../../libra/types" }
star_types = { path = "../../star_types" }
failure = { path = "../../libra/common/failure_ext", package = "failure_ext" }
chain_client = {path = "../chain_client"}
chain_service = {path = "../chain_service"}
crypto = { path = "../../libra/crypto/crypto" }
logger = { path = "../../libra/common/logger"}
futures03 = { package = "futures-preview", version = "=0.3.0-alpha.17", features = ["async-await", "nightly", "io-compat", "compat"] }
futures = "0.1.28"
grpcio = "0.4.4"
atomic_refcell = "0.1.3"
star_node = {path = "../star_node"}
admission_control_proto = { path = "../../libra/admission_control/admission_control_proto" }
admission_control_service = { path = "../../libra/admission_control/admission_control_service" }
config = { path = "../../libra/config"}
storage_client = { path = "../../libra/storage/storage_client" }
storage_service = { path = "../../libra/storage/storage_service" }
vm_validator = { path = "../../libra/vm_validator" }
metrics = { path = "../../libra/common/metrics" }
mempool = { path = "../../libra/mempool" }
execution_proto = { path = "../../libra/execution/execution_proto" }
execution_service = { path = "../../libra/execution/execution_service" }
grpc_helpers = { path = "../../libra/common/grpc_helpers" }
crash_handler = { path = "../../libra/common/crash_handler" }
grpcio-sys = "0.4.4"
rayon = "1.2.0"

[dev-dependencies]
crypto = { path = "../../libra/crypto/crypto", features = ["testing"] }