[package]
name = "star_node"
version = "0.1.0"
authors = ["tiangong3624749 <tiangong3624749@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.4.4"
proto_conv = { path = "../../libra/common/proto_conv", features = ["derive"] }
protobuf = "2.7"
grpc_helpers = { path = "../../libra/common/grpc_helpers" }
types = { path = "../../libra/types" }
futures = "0.1.28"
star_types = { path = "../../star_types" }
crypto = { path = "../../libra/crypto/crypto" }
hex = "0.3.2"
vm_genesis = { path = "../../libra/language/vm/vm_genesis" }
channel = { path = "../../libra/common/channel" }
metrics = { path = "../../libra/common/metrics" }
futures03 = { package = "futures-preview", version = "=0.3.0-alpha.17", features = ["async-await", "nightly", "io-compat", "compat"] }
tokio = "0.1.22"
failure = { path = "../../libra/common/failure_ext", package = "failure_ext" }
vm_runtime = { path = "../../libra/language/vm/vm_runtime" }
lazy_static = "1.3.0"
config = { path = "../../libra/config"}
vm_cache_map = { path = "../../libra/language/vm/vm_runtime/vm_cache_map" }
rental = "0.5.4"
compiler = { path = "../../libra/language/compiler" }
vm_runtime_types = { path = "../../libra/language/vm/vm_runtime/vm_runtime_types" }
vm = { path = "../../libra/language/vm" }
state_view = { path = "../../libra/storage/state_view" }
state_store = { path = "../../storage/state_store" }
bytecode_verifier = { path = "../../libra/language/bytecode_verifier" }
struct_cache = { path = "../../storage/struct_cache" }
clap = "2.32"
stdlib = { path = "../../libra/language/stdlib" }
accumulator = {path = "../../libra/storage/accumulator" }
atomic_refcell = "0.1.3"
signal-hook = "0.1.10"
logger = { path = "../../libra/common/logger" }
env_logger = { version = "0.6" }
libradb = { path = "../../libra/storage/libradb" }
tools = { path = "../../libra/common/tools" }
jellyfish_merkle = { path = "../../libra/storage/jellyfish_merkle" }
state_cache = { path = "../../storage/state_cache" }

admission_control_proto = { path = "../../libra/admission_control/admission_control_proto" }
admission_control_service = { path = "../../libra/admission_control/admission_control_service" }
consensus = { path = "../../libra/consensus" }
debug_interface = { path = "../../libra/common/debug_interface" }
execution_proto = { path = "../../libra/execution/execution_proto" }
execution_service = { path = "../../libra/execution/execution_service" }
mempool = { path = "../../libra/mempool" }
network = { path = "../../libra/network" }
state_synchronizer = { path = "../../libra/state_synchronizer" }
storage_client = { path = "../../libra/storage/storage_client" }
storage_service = { path = "../../libra/storage/storage_service" }
vm_validator = { path = "../../libra/vm_validator" }
grpcio-sys = "0.4.4"
rayon = "1.2.0"
crash_handler = { path = "../../libra/common/crash_handler" }
executable_helpers = { path = "../../libra/common/executable_helpers" }
jemallocator = { version = "0.3.2", features = ["alloc_trait", "profiling", "unprefixed_malloc_on_supported_platforms"] }

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"
