[package]
name = "cli_wallet"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
rust-crypto = "0.2"
log = "0.4.7"
rand = "0.6.5"
rand_core = "0.4.0"
hex = "0.3"
byteorder = "1.3.2"
serde = "1.0.96"
tiny-keccak = "1.5.0"
protobuf = "2.7"
sha3 = "0.8.2"
bincode = "1.1.1"
prost = "0.5.0"
libra-types = { path = "../../libra/types" }

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"

[dependencies.libra_crypto]
path = "../../libra/crypto/crypto"
package = "libra-crypto"

[dependencies.failure]
path = "../../libra/common/failure-ext"
package = "libra-failure-ext"

[dev-dependencies]
tempfile = "3.1.0"