[package]
name = "generic_sparse_merkle"
version = "0.1.0"
authors = ["jolestar <jolestar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = { path = "../failure_ext", package = "failure_ext" }
crypto = { path = "../../crypto/legacy_crypto" }