[package]
name = "local_vm"
version = "0.1.0"
authors = ["jolestar <jolestar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rental = "0.5.4"
atomic_refcell = "0.1.3"

vm_runtime = {path="../vm/vm_runtime"}
vm_cache_map = {path="../vm/vm_runtime/vm_cache_map"}
lazy_static = "1.3.0"
failure = { path = "../../common/failure_ext", package = "failure_ext" }
config = { path = "../../config"}
types = { path = "../../types" }
state_view = { path = "../../storage/state_view"}

[dev-dependencies]
crypto = { path = "../../crypto/crypto", features = ["testing"] }