[package]
name = "local_vm"
version = "0.1.0"
authors = ["jolestar <jolestar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rental = "0.5.4"
atomic_refcell = "0.1.3"

vm_runtime = {path="../../libra/language/vm/vm_runtime"}
vm_cache_map = {path="../../libra/language/vm/vm_runtime/vm_cache_map"}
lazy_static = "1.3.0"
failure = { path = "../../libra/common/failure_ext", package = "failure_ext" }
config = { path = "../../libra/config"}
types = { path = "../../libra/types" }
state_view = { path = "../../libra/storage/state_view"}

[dev-dependencies]
crypto = { path = "../../libra/crypto/crypto", features = ["testing"] }