[package]
name = "node_client"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
grpcio = { version = "=0.5.0-alpha.4", default-features = false }

failure = { path = "../../libra/common/failure_ext", package = "failure_ext" }
star_types = { path = "../../star_types" }
prost = "0.5.0"