[package]
name = "node_client"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
grpcio = { version = "=0.5.0-alpha.4", default-features = false }

anyhow = "1.0"
sgtypes = { path = "../../sgtypes" }
node_proto = { path = "../node_proto" }
prost = "0.6.1"