[package]
name = "node_internal"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
network = { package = "sgnetwork", path = "../../sgnetwork"}

futures = { version = "0.3.0", features = ["io-compat", "compat"] }
futures_01 = { version = "0.1.25", package = "futures" }
futures-timer = "1.0.2"
lazy_static = "1.2.0"
parity-multiaddr = "0.4.0"
tokio = { version = "0.2", features = ["full"] }
tokio-timer = "0.2"
bytes = "0.4.12"
rand = "0.6.5"

libra-logger = { path = "../../libra/common/logger" }
sg_config = { path = "../../sgconfig"}
sgwallet = { path="../../sgwallet"}
sgchain = { path = "../../sgchain"}
libra-types = { path = "../../libra/types" }
sgtypes = { path = "../../sgtypes" }
node_proto = { path = "../node_proto"}
router = { path = "../../router" }
stats = { path = "../../router/stats" }

libra-crypto = { path = "../../libra/crypto/crypto"}
prost = "0.5.0"
anyhow = "1.0"
hex = { version = "0.3.2", default-features = false }
lcs = { path = "../../libra/common/lcs", package = "libra-canonical-serialization" }
libra-tools = {path ="../../libra/common/tools", package = "libra-tools"}

[dev-dependencies]
libra-config = { path = "../../libra/config"}