[package]
name = "node_proto"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bytes = { version = "0.4.12", default-features = false }
prost = "0.5.0"
futures = "0.1.28"
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
proptest = "0.9.2"
proptest-derive = "0.1.0"
protobuf = "2.7"
grpc_helpers = { path = "../../libra/common/grpc_helpers" }
failure = { path = "../../libra/common/failure_ext", package = "failure_ext" }
proptest_helpers = { path = "../../libra/common/proptest_helpers" }
libra-types = { path = "../../libra/types"}
star_types = { path = "../../star_types" }
crypto = { path = "../../libra/crypto/crypto", features = ["testing"] }

[build-dependencies]
prost-build = "0.5.0"
grpcio-compiler = { version = "0.5.0-alpha.2", default-features = false, features = ["prost-codec"] }