[package]
name = "node_proto"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bytes = { version = "0.4.12", default-features = false }
prost = "0.6.1"
futures = "0.1.28"
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
protobuf = "2.7"
anyhow = "1.0"
libra-types = { path = "../../libra/types"}
sgtypes = { path = "../../sgtypes" }
libra-crypto = { path = "../../libra/crypto/crypto"}

[build-dependencies]
prost-build = "0.5.0"
grpcio-compiler = { version = "0.5.0-alpha.2", default-features = false, features = ["prost-codec"] }