[package]
name = "node_service"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
futures01 = { package = "futures", version = "0.1.26" }
futures03 = { package = "futures-preview", version = "=0.3.0-alpha.19", features = ["compat"] }
serde = { version = "1.0.96", features = ["derive"] }
rand = "0.6.5"
tokio = "=0.2.0-alpha.6"

node_internal = { path = "../node_internal" }
failure = { path = "../../libra/common/failure_ext", package = "failure_ext" }
sgtypes = { path = "../../sgtypes" }
prost = "0.5.0"
grpc_helpers = { path = "../../libra/common/grpc_helpers" }
node_proto = { path = "../node_proto"}
node_client = { path = "../node_client" }
crypto = { path = "../../libra/crypto/crypto" }
libra-types = { path = "../../libra/types"}
sg_config = {path="../../sgconfig"}
sgchain = { path = "../../sgchain"}
logger = { path = "../../libra/common/logger" }

env_logger = { version = "0.6" }

