[package]
name = "node_service"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
futures01 = { package = "futures", version = "0.1.26" }
futures = { version = "0.3.0", features = ["io-compat", "compat"] }
serde = { version = "1.0.96", features = ["derive"] }
rand = "0.6.5"
tokio = { version = "0.2", features = ["full"] }

node_internal = { path = "../node_internal" }
anyhow = "1.0"
sgtypes = { path = "../../sgtypes" }
prost = "0.6.1"
grpc-helpers = { path = "../../libra/common/grpc-helpers" }
node_proto = { path = "../node_proto"}
libra-crypto = { path = "../../libra/crypto/crypto" }
libra-types = { path = "../../libra/types"}
sg_config = {path="../../sgconfig"}
libra-logger = { path = "../../libra/common/logger" }

sgchain = { path = "../../sgchain"}